--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -36,6 +36,14 @@
 	font-size: 24px;
 }
 
+.q-item__section--side {
+	color: #fff;
+}
+
+.q-item__section--side > .q-icon {
+	font-size: 34px;
+}
+
 .q-field__marginal {
 	color: rgb(255, 255, 255);
 	font-size: 24px;
