--- a/src/css/quasar.variables.scss
+++ b/src/css/quasar.variables.scss
@@ -13,7 +13,7 @@
 // Tip: Use the "Theme Builder" on Quasar's documentation website.
 
 $primary   : #1976D2;
-$secondary : #26A69A;
+$secondary : #959595;
 $accent    : #fefefe;
 
 $dark      : #1D1D1D;
