--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -15,6 +15,12 @@
   position: relative;
 }
 
+.q-item__section--main ~ .q-item__section--side {
+	align-items: flex-end;
+	padding-right: 0;
+	padding-left: 0;
+}
+
 .q-field__control {
 	color: var(--q-accent);
 	height: 56px;
