--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -1,8 +1,8 @@
 // app global css in SCSS form
 .hero-image {
   /* Use "linear-gradient" to add a darken background effect to the image (photographer.jpg). This will make the text easier to read */
-  background: #030000;
-background: linear-gradient(180deg,#030000 33%, #090979 66%, #0037ff 100%);
+  	background: #030000;
+	background: linear-gradient(180deg,#030000 33%, #090979 66%, #0037ff 100%);
   /* Set a specific height */
   height: 100%;
 
@@ -75,12 +75,12 @@ background: linear-gradient(180deg,#030000 33%, #090979 66%, #0037ff 100%);
 
 .safe-area-top {
   padding-top: env(safe-area-inset-top);
-  //height: calc(63px + env(safe-area-inset-top));
+  height: calc(10px + env(safe-area-inset-top));
 }
 
-/*body.platform-ios .my-toolbar-title {
-	padding-top: 63px; /* Adjust as needed for specific alignment 
-}*/
+body.platform-ios .my-toolbar-title {
+	padding-top: 10px; 
+}
 
 .safe-area-bottom {
   //height: calc(100% + env(safe-area-inset-bottom));
