--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -2,7 +2,7 @@
 .hero-image {
   /* Use "linear-gradient" to add a darken background effect to the image (photographer.jpg). This will make the text easier to read */
   background: #030000;
-background: linear-gradient(180deg,rgba(3, 0, 0, 1) 33%, rgba(9, 9, 121, 1) 66%, rgba(0, 55, 255, 1) 100%);
+background: linear-gradient(180deg,#030000 33%, #090979 66%, #0037ff 100%);
   /* Set a specific height */
   height: 100%;
 
@@ -11,6 +11,15 @@ background: linear-gradient(180deg,rgba(3, 0, 0, 1) 33%, rgba(9, 9, 121, 1) 66%,
   background-repeat: no-repeat;
   background-size: cover;
   position: relative;
+}
+
+.q-item__section--side {
+	padding-right: 8px;
+}
+
+.fit {
+    width: 101% !important;
+    height: 100% !important;
 }
 
 .q-item__section--main ~ .q-item__section--side {
